--- a/style.css
+++ b/style.css
@@ -7,5 +7,9 @@ body {
 }
 
 .answers {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
   margin-bottom: 20px;
 }/*# sourceMappingURL=style.css.map */
