--- a/style.css
+++ b/style.css
@@ -12,4 +12,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   margin-bottom: 20px;
+}
+.answers > button {
+  margin: 5px;
 }/*# sourceMappingURL=style.css.map */
